--- a/src/components/FinalCTA.astro
+++ b/src/components/FinalCTA.astro
@@ -10,7 +10,7 @@
       A Elonet Habitação, com mais de 25 anos de experiência no SFH e FCVS, atua em toda a esteira do processo, auxiliando instituições a organizar carteiras, mitigar riscos e viabilizar a novação dos créditos.
     </p>
     <div class="cta-actions" data-aos="fade-up" data-aos-delay="200">
-      <a href="https://wa.me/5511999999999?text=Olá,%20gostaria%20de%20falar%20com%20um%20especialista" class="btn-cta-primary">
+      <a href="https://wa.me/5561982610809?text=Olá,%20gostaria%20de%20falar%20com%20um%20especialista%20sobre%20FCVS" class="btn-cta-primary">
         Fale com a Elonet Habitação
       </a>
     </div>
