--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -34,7 +34,7 @@
         <ul class="footer-links">
           <li><a href="/solucoes">FCVS e Novação</a></li>
           <li><a href="/solucoes">Consultoria Técnica</a></li>
-          <li><a href="/solucoes">Regularização Fundiária</a></li>
+          <li><a href="/solucoes"></a></li>
         </ul>
       </div>
 
@@ -61,7 +61,7 @@
 
     <div class="footer-bottom">
       <p class="footer-copyright">
-        © 2024 Elonet Habitação. Todos os direitos reservados.
+        © 2026 Elonet Habitação. Todos os direitos reservados.
       </p>
       <div class="footer-legal">
         <a href="/aviso-de-privacidade">Privacidade</a>
